# XyFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xy/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xy/ffmpeg/sample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xy/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: CMakeLists.txt
native/src/main/cpp/ffmpeg/armv7-a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
native/src/main/cpp/ffmpeg/armv8-a/include/libavutil/: ffversion.h
native/src/main/cpp/ffmpeg/armv8-a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
native/src/main/cpp/include/libavcodec/: packet.h  version.h
native/src/main/cpp/include/libavdevice/: avdevice.h  version.h
native/src/main/cpp/include/libavfilter/: avfilter.h  version.h
native/src/main/cpp/include/libavformat/: avformat.h  version.h
native/src/main/cpp/include/libavutil/: pixfmt.h
native/src/main/cpp/include/libpostproc/: version.h
native/src/main/cpp/include/libswscale/: version.h
native/src/main/cpp/jni/: video_player.c  video_player.h
